ABtesting/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appv1-ingress
  namespace: linkerd-test
  labels:
    app: appv1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:9898;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - backend:
              serviceName: appv1
              servicePort: 80
